# GMPI_Adaptors

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
VST3Adaptor/: AaVstWrapperDiagGui.h  CMakeLists.txt  CMakeLists_old.txt  ControllerWrapper.cpp  ControllerWrapper.h  EditButtonGui.cpp  EditButtonGui.h  MyViewStream.h  ProcessorWrapper.cpp  ProcessorWrapper.h  VST3Adaptor.cpp  VST3AdaptorGui.cpp  VstFactory.cpp  VstFactory.h  VstwrapperfailGui.h  WindowManager.cpp  WindowManager.h  ivstmidi2extension.h  myPluginProvider.h
