cmake_minimum_required(VERSION 3.30)
# macOS 12 SDK introduced MIDI 2.0
set(CMAKE_OSX_DEPLOYMENT_TARGET "12.0" CACHE STRING "Minimum MacOS deployment version")
set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "Build architectures for MacOS" FORCE)

set(CMAKE_CXX_STANDARD 20)

include_directories(
${CMAKE_CURRENT_SOURCE_DIR}
)

project(GMPI_Adaptors)

add_subdirectory(VST3Adaptor)

